--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <main class="flex">
-        <div class="flex-item-center quote"></div>
-        <div class="flex-item-bottom">
-            <a class="fa fa-random js-get-quote" aria-hidden="true" title="Get Quote" href="#"></a>
-            <a class="fa fa-language js-translate" aria-hidden="true" title="Translate"></a>
-            <a class="fa fa-twitter js-post-quote" aria-hidden="true" title="Twitter" target="_blank" href="#"></a>
-        </div>
+    <main class="vertical-align">
+        <div class="quote"></div>
     </main>
+    <aside class="bottom-box">
+        <a class="fa fa-random js-get-quote" aria-hidden="true" title="Get Quote" href="#"></a>
+        <a class="fa fa-language js-translate" aria-hidden="true" title="Translate"></a>
+        <a class="fa fa-twitter js-post-quote" aria-hidden="true" title="Twitter" target="_blank" href="#"></a>
+    </aside>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js"></script>
     <script src="js/script.js"></script>
