--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Quote Machine</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine:700">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -15,13 +15,13 @@
         <div class="quote"></div>
     </main>
     <aside class="bottom-box">
-        <a class="fa fa-random js-get-quote" aria-hidden="true" title="Get Quote" href="#"></a>
-        <a class="fa fa-language js-translate" aria-hidden="true" title="Translate"></a>
-        <a class="fa fa-twitter js-post-quote" aria-hidden="true" title="Twitter" target="_blank" href="#"></a>
+        <a class="fa fa-random js-get-quote" title="Get Quote" href="#"></a>
+        <a class="fa fa-language js-translate" title="Translate"></a>
+        <a class="fa fa-twitter js-post-quote" title="Twitter" target="_blank" href="#"></a>
     </aside>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.4/typed.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
