--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,7 @@
     </main>
     <aside class="bottom-box">
         <a class="fa fa-random js-get-quote" title="Get Quote" href="#"></a>
-        <a class="fa fa-language js-translate" title="Translate"></a>
+        <a class="fa fa-language js-translate" title="Translate" href="#"></a>
         <a class="fa fa-twitter js-post-quote" title="Twitter" target="_blank" href="#"></a>
     </aside>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
