--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main class="vertical-align">
+    <main>
         <div class="quote"></div>
     </main>
     <aside class="bottom-box">
